--- a/layout/src/main/resources/static/index.html
+++ b/layout/src/main/resources/static/index.html
@@ -1,9 +1,9 @@
 Hello World!
 
 <ul>
-    <li><a href="http://localhost:8000">Home</a></li>
-    <li><a href="http://localhost:8010/sign-in">Sign-in</a></li>
-    <li><a href="http://localhost:8000/other">Other</a></li>
-    <li><a href="http://localhost:8030/api/dummy">Dummy Service</a></li>
-    <li><a href="http://localhost:8010/api/logout">Logout</a></li>
+    <li><a href="/">Home</a></li>
+    <li><a href="/auth/sign-in">Sign-in</a></li>
+    <li><a href="/other">Other</a></li>
+    <li><a href="/backend/api/dummy">Dummy Service</a></li>
+    <li><a href="/auth/api/logout">Logout</a></li>
 </ul>
